<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/app_name"
    tools:context=".MainActivity">

 <GridLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:rowCount="8"
     android:columnCount="2">


  <ImageView
      android:id="@+id/img1"
      android:layout_width="205dp"
      android:layout_height="157dp"
      android:layout_row="0"
      android:layout_rowWeight="1"
      android:layout_column="0"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      app:srcCompat="@drawable/img1"
      android:contentDescription="@string/todo"/>

  <ImageView
      android:id="@+id/img2"
      android:layout_width="205dp"
      android:layout_height="157dp"
      android:layout_rowWeight="1"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      app:srcCompat="@drawable/imj2"
      android:contentDescription="@string/TODO"/>

  <ImageView
      android:id="@+id/img3"
      android:layout_width="205dp"
      android:layout_height="157dp"
      android:layout_rowWeight="1"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      app:srcCompat="@drawable/img3"
      android:contentDescription="@string/todO"/>

  <ImageView
      android:id="@+id/img4"
      android:layout_width="205dp"
      android:layout_height="157dp"
      android:layout_rowWeight="1"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      app:srcCompat="@drawable/img4"
      android:contentDescription="@string/toDo"/>


  <ImageView
      android:id="@+id/img5"
      android:layout_width="205dp"
      android:layout_height="157dp"
      android:layout_rowWeight="1"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      app:srcCompat="@drawable/img5"
      android:contentDescription="@string/tOdo"/>

  <ImageView
      android:id="@+id/img6"
      android:layout_width="205dp"
      android:layout_height="157dp"
      android:layout_rowWeight="1"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      app:srcCompat="@drawable/img6"
      android:contentDescription="@string/Todo"/>

  <ImageView
      android:id="@+id/img7"
      android:layout_width="205dp"
      android:layout_height="157dp"
      android:layout_rowWeight="1"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      app:srcCompat="@drawable/img7"
      android:contentDescription="@string/TOdo"/>

  <ImageView
      android:id="@+id/img8"
      android:layout_width="205dp"
      android:layout_height="157dp"
      android:layout_rowWeight="1"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      app:srcCompat="@drawable/img8"
      android:contentDescription="@string/toDO"/>

  <ImageView
      android:id="@+id/img9"
      android:layout_width="205dp"
      android:layout_height="157dp"
      android:layout_rowWeight="1"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      app:srcCompat="@drawable/img9"
      android:contentDescription="@string/ToDo"/>

  <ImageView
      android:id="@+id/img10"
      android:layout_width="205dp"
      android:layout_height="157dp"
      android:layout_rowWeight="1"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      app:srcCompat="@drawable/img10"
      android:contentDescription="@string/tOdO"/>

  <ImageView
      android:id="@+id/img11"
      android:layout_width="205dp"
      android:layout_height="157dp"
      android:layout_rowWeight="1"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      app:srcCompat="@drawable/img11"
      android:contentDescription="@string/todoO"/>

  <ImageView
      android:id="@+id/img12"
      android:layout_width="205dp"
      android:layout_height="157dp"
      android:layout_rowWeight="1"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      app:srcCompat="@drawable/img12"
      android:contentDescription="@string/todoo"/>

  <ImageView
      android:id="@+id/img13"
      android:layout_width="205dp"
      android:layout_height="157dp"
      android:layout_rowWeight="1"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      app:srcCompat="@drawable/img13"
      android:contentDescription="@string/toOdo"/>

  <ImageView
      android:id="@+id/img14"
      android:layout_width="205dp"
      android:layout_height="157dp"
      android:layout_rowWeight="1"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      app:srcCompat="@drawable/img14"
      android:contentDescription="@string/toodo"/>

  <ImageView
      android:id="@+id/img15"
      android:layout_width="205dp"
      android:layout_height="157dp"
      android:layout_rowWeight="1"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      app:srcCompat="@drawable/img15"
      android:contentDescription="@string/todooo"/>

  <ImageView
      android:id="@+id/img16"
      android:layout_width="205dp"
      android:layout_height="157dp"
      android:layout_rowWeight="1"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      app:srcCompat="@drawable/img16"
      android:contentDescription="@string/todoOo"/>

 </GridLayout>

</ScrollView>